Change some routes path.
